fix padding bottom on mobile

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -244,6 +244,7 @@ form p {
   .content {
     text-align: center;
     padding-top: 4.375rem;
+    padding-bottom: 6.25rem;
   }
 }
 
