--- a/src/assets/scss/layout/_content.scss
+++ b/src/assets/scss/layout/_content.scss
@@ -42,5 +42,6 @@
   @include breakpoint-max(sm) {
     text-align: center;
     padding-top: rem(70);
+    padding-bottom: rem(100);
   }
 }
